--- a/Segmenting and clustering neighbourhoods in Toronto.ipynb
+++ b/Segmenting and clustering neighbourhoods in Toronto.ipynb
@@ -693,7 +693,7 @@
     }
    ],
    "source": [
-    "#The new Wiki link already has nieghbourhood merged according to Postal Code and Borough\n",
+    "#The new Wiki link already has neighbourhood merged according to Postal Code and Borough\n",
     "\n",
     "len(df['Postal Code'].unique())"
    ]
